# namma-neighbour

./: .env.example  README.md  deep_project_session.json  pyproject.toml
.claude/: settings.json
.deep-project/: deep_project_interview.md  project-manifest.md
.deep-project/01-foundation/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
.deep-project/02-community-onboarding/: claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
.deep-project/03-seller-onboarding/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
.deep-project/04-marketplace-catalog/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
.deep-project/05-ordering-payments/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
.deep-project/06-mobile-app/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
.deep-project/07-seller-web-portal/: COMPLETION-STATUS.md  claude-integration-notes.md  claude-interview.md  (+6 more)
namma_neighbor/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pytest.ini
(+348 files in other folders)
